--- a/App/Views/500.html
+++ b/App/Views/500.html
@@ -1,10 +1,33 @@
-{% extends "base.html" %}
-
-{% block title %}Error{% endblock %}
-
+{% extends "base_error.html" %}
+{% block title %}Lỗi hệ thống{% endblock %}
 {% block body %}
-
-<h1>An error occurred</h1>
-<p>Sorry, an error has occurred.</p>
-
+<div class="container body">
+    <div class="main_container">
+        <!-- page content -->
+        <div class="col-md-12">
+            <div class="col-middle">
+                <div class="text-center">
+                    <h1 class="error-number">500</h1>
+                    <h2>:( Có lỗi xảy ra, vui lòng truy cập sau giây lát...</h2>
+                    <p>Vui lòng liên hệ quản trị viên để báo cáo lỗi để được xử lý nhanh nhất hoặc truy cập trang khác. Chân thành cám ơn !<a href="/">Báo cáo?</a>
+                    </p>
+                    <div class="mid_center">
+                        <h3>Tìm kiếm</h3>
+                        <form action="/ket-qua-tim-kiem">
+                            <div class="col-xs-12 form-group pull-right top_search">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="keywords" placeholder="Nhập từ khóa...">
+                                    <span class="input-group-btn">
+                              <button class="btn btn-default" type="button">Tìm!</button>
+                          </span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /page content -->
+    </div>
+</div>
 {% endblock %}
