--- a/App/Views/User/index.html
+++ b/App/Views/User/index.html
@@ -118,8 +118,7 @@ Trang chủ
                 setOutputSize("small");
                 showVietCal();
             </script>
-            <table align="center" cellspacing="1" border="0">
-
+            <table align="center" cellspacing="1" border="0" style="padding-left: 1em">
                 <tr>
                     <td align="center">
                         <div class="cal1">
