--- a/App/Views/AJAX/ket_qua_tra_cuu_cach_xung_ho.html
+++ b/App/Views/AJAX/ket_qua_tra_cuu_cach_xung_ho.html
@@ -2,7 +2,12 @@
     <div style="flex: 5">
         <p>Đối tượng 1:</p>
         {% if hoSo1 is not null %}
-        <img src="/images/user.png" alt="">
+            {% if hoSo1.HinhAnh %}
+            <img src="/images/AnhHoSo/{{hoSo1.HinhAnh}}">
+            {% else %}
+            <img src="/images/user.png" alt="">
+            {% endif %}
+
         <p style="color: red;">Đời thứ: <b>{{hoSo1.DoiThu}}</b> - Con thứ: <b>{{hoSo1.ConThu}}</b></p>
         <p>Họ và tên: <b>{{hoSo1.HoTen}}</b></p>
         <p>Quê quán: <b>{{hoSo1.QueQuan}}</b></p>
@@ -12,7 +17,7 @@
         </p>
         <button onclick="deleteTraCuuHoSo({{hoSo1.MaHoSo}})">Hủy so sánh</button>
         {% else %}
-        <p>Vui lòng chọn !</p>
+        <p style="color: red">Vui lòng chọn !</p>
         {% endif%}
     </div>
     <div style="flex: 1">
@@ -20,7 +25,11 @@
     <div style="flex: 5">
         <p>Đối tượng 2:</p>
         {% if hoSo2 is not null %}
-        <img src="/images/user.png" alt="">
+            {% if hoSo2.HinhAnh %}
+            <img src="/images/AnhHoSo/{{hoSo2.HinhAnh}}">
+            {% else %}
+            <img src="/images/user.png" alt="">
+            {% endif %}
         <p style="color: red;">Đời thứ: <b>{{hoSo2.DoiThu}}</b> - Con thứ: <b>{{hoSo2.ConThu}}</b></p>
         <p>Họ và tên: <b>{{hoSo2.HoTen}}</b></p>
         <p>Quê quán: <b>{{hoSo2.QueQuan}}</b></p>
@@ -30,7 +39,7 @@
         </p>
         <button onclick="deleteTraCuuHoSo({{hoSo2.MaHoSo}})">Hủy so sánh</button>
         {% else %}
-        <p>Vui lòng chọn !</p>
+        <p style="color: red">Vui lòng chọn !</p>
         {% endif%}
     </div>
 </div>
