--- a/App/Views/User/LoaiTin/index.html
+++ b/App/Views/User/LoaiTin/index.html
@@ -1,6 +1,6 @@
 {% extends "base_user.html" %}
 {% block title %}
-Trang chủ
+Bài viết theo loại tin
 {% endblock %}
 {% block css %}
 <link href="/css/styles.css" rel="stylesheet">
@@ -8,6 +8,42 @@ Trang chủ
     button {
         margin: .5em;
         width: 2em;
+    }
+
+    table {
+        width: 100%;
+    }
+
+    .cal1 .clndr .clndr-table tr .day {
+        height: 0;
+    }
+
+    .clndr .clndr-controls {
+        padding: 0 !important;
+        line-height: 1.6em;
+        font-size: 1em;
+        background: linear-gradient(to bottom, rgba(243, 197, 189, 1) 0%, rgba(232, 108, 87, 1) 50%, rgba(234, 40, 3, 1) 51%, rgba(255, 102, 0, 1) 75%, rgba(199, 34, 0, 1) 100%);
+    }
+    .pagination {
+        display: inline-block;
+    }
+
+    .pagination a {
+        color: black;
+        float: left;
+        padding: 8px 16px;
+        text-decoration: none;
+    }
+
+    .pagination a.active {
+        background-color: #4CAF50;
+        color: white;
+        border-radius: 5px;
+    }
+
+    .pagination a:hover:not(.active) {
+        background-color: #ddd;
+        border-radius: 5px;
     }
 </style>
 {% endblock %}
@@ -22,37 +58,49 @@ Trang chủ
                     </h4>
                 </li>
             </ul>
-            <div id="search-box">
-                <form action="/ket-qua-tim-kiem" method="get" id="search">
-                    <input type="text" name="keywords">
-                    <input type="submit" value="Tìm kiếm">
-                </form>
-            </div>
         </div>
         <br>
         <div>
             <div style="height: 100px; text-align: center; background-image: url('/images/anh1.jpg'); line-height: 100px; margin-bottom: 2em;">
-                <h3><i class="fa fa-address-book"></i> Bài viết theo loại tin</h3>
+                <h2><i class="fa fa-address-book"></i> Bài viết theo loại tin</h2>
             </div>
-            <div>
-                {% for baiViet in dsBaiViet|slice(0, dsBaiViet|length ) %}
-                <div>
-                    {% if baiViet.HinhAnh is not null and baiViet.HinhAnh != '' %}
-                    <img style="height: 75px; width: 75px" src="/images/AnhBaiViet/{{ baiViet.HinhAnh }}" alt="">
-                    {% else %}
-                    <img style="height: 75px; width: 75px" src="/images/AnhBaiViet/camera.png" alt="">
-                    {% endif %}
-                    <a href="/bai-viet/{{baiViet.MaBaiViet}}">
-                        <a href="/bai-viet/{{baiViet.MaBaiViet}}">
-                            <h5>{{baiViet.TieuDe}}</h5>
-                        </a>
-                    </a>
-                    <p>{{ rutGonHTML(baiViet.NoiDung) |slice(0, 500) ~ '...' }}</p>
-                    <hr>
+            <div class="container">
+                <div class="col-9" style="padding-right: 1em">
+                    <div>
+                        {% for baiViet in dsBaiViet|slice(0, dsBaiViet|length ) %}
+                        <div class="event block-border">
+                            <p class="title-events">
+                                <a href="/bai-viet/{{baiViet.MaBaiViet}}">{{baiViet.TieuDe}}</a>
+                            </p>
+                            <div class="thumb-su-kien" style="float: left">
+                                <a href="/bai-viet/{{baiViet.MaBaiViet}}">
+                                    {% if baiViet.HinhAnh is not null and baiViet.HinhAnh != '' %}
+                                    <img style="min-width: 100%; height: 100%; float: left"
+                                         src="/images/AnhBaiViet/{{ baiViet.HinhAnh }}" alt="">
+                                    {% else %}
+                                    <img style="min-width: 100%; height: 100%; float: left"
+                                         src="/images/AnhBaiViet/camera.png" alt="">
+                                    {% endif %}
+                                </a>
+                            </div>
+                            <small>Ngày viết: {{baiViet.NgayDuaTin|date("d/m/Y")}}</small>
+                            <p class="description">{{ rutGonHTML(baiViet.NoiDung) |slice(0, 200) ~ '...' }}</p>
+                        </div>
+                        <div class="clearfix"></div>
+                        {% endfor %}
+                    </div>
+                    <div id="divtrang" style="margin-left: 36%;" class="pagination">{{urlPagination | raw }}</div>
                 </div>
-                {% endfor %}
+                <div class="col-3 block-border">
+                    <div>
+                        <ul style="list-style: none">
+                            {% for loaiTin in dsLoaiTin %}
+                                <li style="display:block; line-height: 2em ;border-bottom: 1px solid #f0f0f0"><a href="/user/LoaiTin/index/{{loaiTin.MaLoaiTin}}"><i class="fa fa-tags"></i> {{loaiTin.TenLoaiTin}}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div id="divtrang" style="text-align: center">{{urlPagination | raw }}</div>
         </div>
     </div>
 </section>
